# horizon-harmony

./: Makefile  README.md  pubspec.yaml
.github/workflows/: main.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/horizon_harmony/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/pages/: home_page.dart  track_info_page.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
messages/: station.proto
native/hub/: Cargo.toml
native/hub/data/: metro-track-info-reply-with-invalid-item.json  metro-track-info-reply.json  tdx-alert-reply.json
native/hub/src/: lib.rs  presenter.rs  sample_functions.rs
native/hub/src/model/: api.rs  mod.rs
native/hub/src/model/metro/: mod.rs  parking_lot.rs  track_info.rs
native/hub/src/model/tdx/: alert.rs
native/hub/src/presenter/: task.rs
native/model/: Cargo.toml
native/model/data/: metro-parking-lot-query.xml  metro-parking-lot-reply.json  metro-track-info-query.xml
native/model/src/: lib.rs
native/model/src/metro/: mod.rs  parking_lot.rs  track_info.rs
native/model/src/tdx/: access_token.rs  alert.rs  mod.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
