[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "6.6.0"
prost = "0.12.3"
wasm-bindgen = "0.2.90"
tokio_with_wasm = "0.4.0"

quick-xml = { version = "0.31.0", features = ["serialize"] }
reqwest = { version = "0.11.26", features = ["gzip"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
time = { version = "0.3.34", features = ["serde", "macros", "parsing", "local-offset"] }
tokio = { version = "1.36.0", features = ["macros", "rt"] }
