[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.31.0", features = ["serialize"] }
reqwest = { version = "0.11.26", features = ["gzip"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
time = { version = "0.3.34", features = ["serde", "macros", "parsing"] }
tokio = { version = "1.36.0", features = ["macros", "rt"] }
